--- a/css/main.css
+++ b/css/main.css
@@ -2,80 +2,101 @@
 	margin:0 auto;
 	width: 80%;
 }
+
 *{
 	box-sizing: border-box;
 	font-family: "Baloo paaji";
 }
+
 body {
 	background-color: #D1FCF9;
 	margin: 0px !important;
 	padding: 0px !important;
 }
+
 header{
 	background-color: #037F99;
 }
+
 nav {
 	margin-top: 30px;
 }
+
 .titulo{
 	font-family: "Baloo paaji";
 	color: #FF7673;
 }
+
 span{
 	color:white;
 }
-li {
+
+a {
 	float: left;
 	margin-left: 10px;
 	color:white;
 	font-size: 15px;
+	text-decoration: none;
 }
+
 .fondoconejo{
 	background: url(../img/img-1.jpg);
 	background-size: 100%;
 	background-repeat: no-repeat;
 	padding: 50px 80px;
 }
+
 .opacidad .degrade {
 	background-color: rgba(3, 127, 153, 0.87);
 }
+
 .titulo2 {
 	color: #FF7673;
 	margin:0;
 	font-size:80px;
 	text-align: center;
 }
+
 .degrade h3 {
 	text-align: center;
 	color: white;
 }
+
 .degrade {
 	padding: 60px 30px;
 }
+
  img{
  	width: 100%;
+ 	display: block;
  }
+
  .box-text {
  	background-color: #037F99;
  	border: 10px solid white;
  	text-align: center;
  }
+
  .box-text h4 {
  	color:#FF7673;
  }
+
  .box-text p {
  	color: white;
  }
+
  .box-blue {
  	padding-top: 20px;
  	padding-bottom: 20px;
-	background-color: #037F99;
+ 	background-color: #037F99;
 	color: black;
  }
+
  .box-blue h4 {
  	color: #FF7673;
  	text-align: center;
  }
+
 .search {
 	background-color: #F1FCFF;
 	border-radius: 6px;
@@ -83,6 +104,18 @@ li {
 	padding-bottom: 10px;	
 	padding-left: 20px;
 }
+
+.face, .insta, .twitter, .youtube{
+	color:#037F99;
+	font-size:30px;
+	margin-left:70px;
+}
+
+.bottom-box{
+ 	border-top: 30px solid #037F99;
+}
+
+
 input {
 	width: 95%;
 	border: none;
@@ -90,26 +123,38 @@ input {
 }
 footer {
 	background-color: #037F99;
+	border-top:3px solid #FF7673 ;
+	margin:0;
+	padding:40px;
 }
+
+footer p{
+	text-align:center;
+	color:white;
+	margin: 0;
+}
+
 .head-bunny {
 	background-image: url(../img/bunny-head.png);
-	background-repeat: repeat;
-	height: 20px auto ;
+	background-size: contain;
+	padding:40px;
 }
+
 .icon{
 	visibility: hidden;
 }
 .box-left {
-	display: block;
-	margin: 0;
+	display:block;
+	background-color: #037F99;
+
 }
 .box-right{
-	display: block;
-	margin: 0;
+	display:block;
 }
 
 .box-left .box-right img{
-	width: 500px;
+	display: block;
+	width: 100% 
 }
 .box-left, .box-right {
 	background-color: #D1FCF9;
@@ -126,6 +171,8 @@ iframe {
 	width: 500px;
 	height: 400px;
 }
+
+
 @media (max-width : 479px) {
 	.titulo{
 		font-size: 30px;
@@ -151,4 +198,21 @@ iframe {
 	.degrade {
 		padding: 25px 15px;
 	}
+	.box-right{
+		display: none;
+	}
+	.box-left{
+		padding-right: 30px;
+	}
+	.col-7{
+		width: 100%;
+	}
+	.col-5{
+		width: 100%;
+	}
+	iframe{
+		width: 330px;
+		height: 300px;
+	}
+
 }
